# tokenless

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  Makefile  README.md  README.zh.md  SECURITY.md  _typos.toml  cliff.toml  deny.toml  dev-install.sh  release-please-config.json  release.toml  rustfmt.toml  test_allow  test_allow2  test_allow4  test_allow5
.cargo/: config.toml
.github/workflows/: cd.yml  ci.yml  release.yml
adapters/tokenless/common/: tokenless-env-fix.sh  tool-ready-spec.json
adapters/tokenless/hermes/: __init__.py  plugin.yaml
adapters/tokenless/hermes/scripts/: install.sh  uninstall.sh
adapters/tokenless/openclaw/: index.ts  openclaw.plugin.json  package.json
adapters/tokenless/openclaw/scripts/: install.sh  uninstall.sh
apps/server/: Cargo.toml
apps/server/src/: main.rs
apps/tui/: Cargo.toml  build.rs
apps/tui/src/: main.rs
crates/core/: Cargo.toml  README.md
crates/core/benches/: core_bench.rs
crates/core/examples/: config_demo.rs
crates/core/src/: config.rs  error.rs  lib.rs  safe_path.rs
crates/core/tests/: integration_test.rs
crates/tokenless-cli/: Cargo.toml  README.md
crates/tokenless-cli/src/: cache.rs  env_check.rs  handlers.rs  main.rs  mcp.rs  shared.rs  util.rs
crates/tokenless-cli/src/commands/: compress.rs  demo.rs  doctor.rs  env_check_cmd.rs  hook.rs  init_cmd.rs  mcp_cmd.rs  mod.rs  rewrite.rs  stats.rs  toon.rs  tui.rs
crates/tokenless-cli/src/commands/hook/: helpers.rs  mod.rs
crates/tokenless-cli/src/env_check/: checker.rs  fixer.rs  mod.rs  spec.rs
crates/tokenless-cli/src/init/: mod.rs  user_detect.rs
crates/tokenless-cli/tests/: e2e_tests.rs  handler_integration.rs  hook_protocol.rs  serialization_regression.rs  toon_roundtrip.rs
crates/tokenless-cli/tests/snapshots/: e2e_tests__compress_schema_pipe.snap  e2e_tests__demo.snap  e2e_tests__doctor.snap  e2e_tests__help.snap  e2e_tests__secure_default_help.snap  e2e_tests__stats_delete_help.snap
crates/tokenless-schema/: Cargo.toml  README.md
crates/tokenless-schema/benches/: schema_bench.rs
crates/tokenless-schema/src/: format_router.rs  lib.rs  response_compressor.rs  schema_compressor.rs  shape_analyzer.rs  wasm.rs
crates/tokenless-schema/src/encoding/: cjson_compact.rs  enhanced_toon.rs  mod.rs  toon_hrv.rs
crates/tokenless-schema/tests/: determinism_tests.rs  golden_snapshots.rs  stress.rs
crates/tokenless-schema/tests/fixtures/: format_deep_chain.json  format_irregular.json  format_schema_enum.json  format_small.json  format_uniform_array.json  response_github_api.json  response_large_array.json  schema_bare.json  schema_weather.json
crates/tokenless-schema/tests/snapshots/: golden_snapshots__golden_format_deep_chain_enhanced.snap  golden_snapshots__golden_format_irregular_cjson.snap  golden_snapshots__golden_format_schema_enum_enhanced.snap  golden_snapshots__golden_format_small_passthrough.snap  golden_snapshots__golden_format_uniform_array_hrv.snap  golden_snapshots__golden_response_aggressive.snap  golden_snapshots__golden_response_github_api.snap  golden_snapshots__golden_response_large_array.snap  golden_snapshots__golden_schema_bare_with_defs.snap  golden_snapshots__golden_schema_weather_function.snap  golden_snapshots__golden_schema_with_enum_truncation.snap  golden_snapshots__golden_schema_with_token_limits.snap
crates/tokenless-semantic/: Cargo.toml  README.md
crates/tokenless-semantic/src/: context_rules.toml  embedder.rs  lib.rs  rules.rs
crates/tokenless-stats/: Cargo.toml  README.md
crates/tokenless-stats/src/: compress_log.rs  config.rs  lib.rs  query.rs  record.rs  recorder.rs  tokenizer.rs
crates/tokenless-tui/: Cargo.toml  README.md
crates/tokenless-tui/src/: app.rs  lang.rs  lib.rs
crates/tokenless-tui/src/ui/: agent_detail.rs  agents.rs  config.rs  dashboard.rs  detail.rs  help.rs  mod.rs  project_picker.rs  records.rs  trends.rs
docs/: agent-capability-matrix.md  codegraph-usage.md  index.md  performance-benchmarks.md  pre-commit-usage.md  release-guide.md  release-plan.md  ruflo-usage.md  sdk-integration-zh.md  sdk-integration.md  user-guide-zh.md  user-guide.md
docs/analysis/: architecture-review-20260617.md  code-quality-review-20260617.md  market-innovation-review-20260617.md  multi-dimensional-analysis.md  multi-role-feature-plan-20260617.md  performance-review-20260617.md  security-review-20260617.md  ux-devrel-review-20260617.md
docs/design/: tokenless-architecture-zh.md  tokenless-architecture.md
docs/examples/: recipes.md
docs/marketing/: weitoutao-copies.md
docs/research/: init-features-architecture.md  init-features-code-review.md  init-features-security-review.md  template-migration-analysis.md  wasm-build-feasibility.md
scripts/: dev-install.sh  update-models.sh
specs/: 0001-architecture.md  0002-schema-compressor-enhancements.md  0003-data-flow-pipeline-design.md  0004-hook-protocol-spec.md  0005-security-model-design.md  0006-error-handling-strategy.md  0007-testing-strategy.md  0008-deployment-architecture.md  0009-optimization-analysis.md  0010-innovation-roadmap.md  0011-mcp-server.md  0012-format-router.md  0013-differential-response.md  0014-semantic-aware-compression.md  0015-security-hardening.md  0016-architecture-alignment.md  0017-stats-management.md  0018-compression-stats-reporting.md  0019-async-semantic-provider.md  0020-team-dashboard.md  0021-policy-config-center.md  codex-support-spec.md  index.md
tests/fixtures/: response-large.json  response.json  tool-schema.json
