[workspace]
members = ["crates/*", "apps/*"]
resolver = "3"

[workspace.package]
version = "1.1.0"
authors = ["TokenFleet-AI"]
edition = "2024"
rust-version = "1.89.0"
license = "Apache-2.0"
repository = "https://github.com/TokenFleet-AI/tokenless"
homepage = "https://github.com/TokenFleet-AI/tokenless"
documentation = "https://docs.rs/"
readme = "README.md"

[workspace.dependencies]
# Core utilities
anyhow = "1.0.102"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6.0"
libc = "0.2"
regex = "1.10"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["rt", "rt-multi-thread", "macros"] }
toml = "0.8"
toon-format = { version = "0.5", default-features = false }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
secrecy = "0.10"

# CLI
blake3 = "1"

# TUI
ratatui = "0.30"
crossterm = "0.29"

# Builder
typed-builder = "0.19"

# Business
rtk-registry = "0.1.0"

insta = { version = "1", features = ["json"] }

# Dev-only testing tools
criterion = "0.5"
rstest = "0.25"
proptest = "1"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
unwrap_in_result = "warn"
panic = "warn"
todo = "deny"
dbg_macro = "deny"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
