[package]
name = "tless-tui"
description = "Standalone TUI dashboard binary for tokenless compression statistics"
version = "0.3.1"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "tless-tui"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
ratatui = "0.30"
crossterm = "0.29"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "6.0"

# Internal
tokenless-tui = { path = "../../crates/tokenless-tui", version = "0.3.1" }
tokenless-stats = { path = "../../crates/tokenless-stats", version = "0.3.1" }
tokenless-core = { path = "../../crates/core", version = "0.3.1" }

[build-dependencies]
built = "0.7"

[lints]
workspace = true
