[package]
name = "tokenless-core"
description = "Shared core types for tokenless"
version = "0.4.0"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/TokenFleet-AI/tokenless"
keywords = ["tokenless", "config", "path", "error-handling"]
categories = ["rust-patterns", "development-tools"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.18"

[dev-dependencies]
criterion = "0.5"
rstest = "0.25"
proptest = "1"

[[bench]]
name = "core_bench"
harness = false

[lints]
workspace = true
