[package]
name = "tokenless"
description = "LLM token optimization CLI — schema/response compression, command rewriting, TOON encoding"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["llm", "token", "compression", "cli", "openai"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "tokenless"
path = "src/main.rs"

[dependencies]
tokenless-schema = { path = "../tokenless-schema", version = "0.3.0" }
tokenless-stats = { path = "../tokenless-stats", version = "0.3.0" }
clap = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
toon-format.workspace = true
rusqlite.workspace = true
dirs.workspace = true
tracing.workspace = true
rtk-registry.workspace = true
blake3 = "1"
lru = "0.12"
tokenless-tui = { path = "../tokenless-tui" }

[lints]
workspace = true
