[package]
name = "tokenless-stats"
description = "SQLite-based compression metrics tracking for tokenless"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono = { workspace = true, features = ["serde"] }
rusqlite.workspace = true
thiserror.workspace = true
dirs.workspace = true

[lints]
workspace = true
