[package]
name = "tokenless-stats"
description = "SQLite-based compression metrics tracking for tokenless"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["llm", "token", "statistics", "sqlite", "metrics"]
categories = ["development-tools", "database", "visualization"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono = { workspace = true, features = ["serde"] }
rusqlite.workspace = true
thiserror.workspace = true
dirs.workspace = true
tracing.workspace = true
typed-builder.workspace = true
secrecy.workspace = true

[lints]
workspace = true
