[package]
name = "tokenless-tui"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Interactive TUI dashboard for tokenless compression statistics"

[dependencies]
# Workspace deps
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true

# TUI
ratatui.workspace = true
crossterm.workspace = true

# Internal
tokenless-stats = { path = "../tokenless-stats", version = "0.3.1" }
tokenless-schema = { path = "../tokenless-schema", version = "0.3.1" }
