[package]
name = "tokenless-tui"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Interactive TUI dashboard for tokenless compression statistics"
keywords = ["llm", "token", "tui", "dashboard", "statistics", "ratatui"]
categories = ["command-line-interface", "visualization", "development-tools"]

[dependencies]
# Workspace deps
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true

# TUI
ratatui.workspace = true
crossterm.workspace = true

# Internal
tokenless-stats = { path = "../tokenless-stats", version = "1.0.0" }
tokenless-schema = { path = "../tokenless-schema", version = "1.0.0" }
